# weavens

./: .gitignore  README.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-and-deploy-prod.yml
backend/: .coveragerc  .env.example  Dockerfile  gunicorn.conf.py  justfile  pyproject.toml
backend/infra/: .terraform.lock.hcl  locals.tf  main.tf
backend/infra/environments/local/: .terraform.lock.hcl  main.tf
backend/infra/environments/production/: .terraform.lock.hcl  backend.tf  main.tf
backend/infra/environments/production/api_gateway/: main.tf
backend/infra/environments/production/backend/: data.tf  main.tf  variables.tf
backend/infra/environments/production/docs_scraper/: main.tf
backend/infra/environments/production/dynamodb/: main.tf
backend/infra/environments/production/ec2/: main.tf  variables.tf
backend/infra/environments/production/ecr/: main.tf  outputs.tf
backend/infra/environments/production/frontend/: main.tf  outputs.tf
backend/infra/environments/production/iam/: .gitignore  backend.tf  main.tf  output.tf
backend/infra/environments/production/iam/templates/: user_credentials.tmpl
backend/infra/environments/production/lambda/: main.tf  variables.tf
backend/infra/environments/production/lambdas/dynamo-es-property-sync/: main.tf
backend/infra/environments/production/opensearch/: main.tf  variables.tf
backend/infra/environments/production/secrets-manager/: main.tf  variables.tf
backend/infra/environments/production/vpc/: main.tf
backend/infra/global/bootstrap/: main.tf
backend/infra/global/ecr/: main.tf
backend/infra/global/iam/: .terraform.lock.hcl  main.tf
backend/infra/global/secrets_manager/: backend.tf  main.tf  variables.tf
backend/infra/global/ssm_parameters/: backend.tf  main.tf
backend/infra/modules/api_gateway/: main.tf  variables.tf
backend/infra/modules/dynamodb/: main.tf  variables.tf
backend/infra/modules/ecr/: main.tf  outputs.tf  variables.tf
backend/infra/modules/iam/: main.tf  outputs.tf  variables.tf
backend/infra/modules/lambda/: main.tf  outputs.tf  variables.tf
backend/scripts/: start_dev.sh
backend/src/: chroma.py  config.py  constants.py  db.py  exception_handlers.py  exceptions.py  logging.py  main.py  middlewares.py  router.py  schemas.py
backend/src/chat/: agent.py  model.py  router.py  schemas.py  session.py  tools.py  utils.py
backend/src/common/: constants.py  exceptions.py  prompts.py
backend/src/core/: analytics.py  config.py  db.py  opensearch.py
backend/src/embedding/: service.py  utils.py  vectordb.py
backend/src/embedding/tests/integration/: test_embedding_service.py
backend/src/embedding/tests/unit/: test_embedding_service.py  test_embedding_utils.py
backend/src/graph/: checkpoint.py  graph.py  nodes.py  router.py  schemas.py  tools.py  utils.py
backend/src/properties/: dependencies.py  router.py  schemas.py  service.py  utils.py
backend/src/scraping/: background.py  router.py  schemas.py  scrape_api.py  service.py
backend/src/scraping/tests/: test_scrape_api.py  test_scrape_url_tasks.py  test_scraping_service.py
docker/: docker-compose.yml
frontend/: .env.example  README.md  app.py  client.py  index.html  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
frontend/src/: App.tsx
frontend/src/libs/: ModelAdapter.tsx  graphClient.ts
frontend/src/libs/streamUtils/: eventParser.ts  stream.ts  types.ts
infra/: README.MD
infra/bootstrap/: .terraform.lock.hcl  main.tf
infra/environments/local/: main.tf
infra/environments/production/: .terraform.lock.hcl  backend.tf  example.tfvars  main.tf  terraform.tf  variables.tf
infra/environments/production/backend/: data.tf  main.tf
infra/environments/production/compute/: main.tf
infra/environments/production/frontend/: main.tf
infra/environments/production/networking/: main.tf
infra/environments/production/opensearch/: main.tf
infra/environments/production/storage/: main.tf
infra/environments/production/vpc/: outputs.tf
infra/global/bootstrap/: main.tf
infra/global/ecr/: backend.tf  main.tf
infra/global/iam/: .terraform.lock.hcl  backend.tf  data.tf  main.tf
infra/global/ssm_parameters/: backend.tf  main.tf  variables.tf
infra/modules/dynamodb/: main.tf
infra/modules/dynamodb-tables/: main.tf  variables.tf
infra/modules/tags/: main.tf
lambdas/dynamo-es-property-sync/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.ts
pipelines/: .env.example  docker-compose.yml  pyproject.toml
pipelines/dags/: create_translation_batch.py  retrieve_translation_batch.py
platform/: .env.example  docker-compose.yml  justfile  run.sh
platform/airflow/: .env.example  airflow-docker-compose.yml
platform/dynamodb/: .env.example  dynamodb-docker-compose.yml
platform/redis/: .env.example  redis-docker-compose.yml
scraper/: .env.example  README.md  justfile  pyproject.toml
scraper/scraper/: constants.py  db.py  items.py  pipelines.py  settings.py  utils.py
scraper/scraper/spiders/: expat_finland_url.py  maanmittauslaitos_url.py  oikotie.py  oikotie_url.py  personalfinance_fi.py  personalfinance_fi_url.py
scrapy-rover/: README.md  pyproject.toml
scrapy-rover/scraper/: constants.py  db.py  items.py  pipelines.py  settings.py  utils.py
scrapy-rover/scraper/spiders/: oikotie.py  oikotie_url.py  personalfinance_fi.py  personalfinance_fi_url.py
scripts/: run.sh  setup.sh
webapp/: .prettierrc.json  eslint.config.js  package.json
(+22 files in other folders)
