[tool.poetry]
name = "house-hunt-backend"
version = "0.1.0"
description = ""
authors = ["Thang Phan <phancaothng@gmail.com>", "Nguyen Pham <nguyenfamj1409@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
uvicorn = "^0.30.3"
boto3 = "^1.34.147"
langchain = ">=0.3,<0.4"
langserve = ">=0.3,<0.4"
sse-starlette = "^2.1.2"
langchain-community = ">=0.3,<0.4"
langchain-openai = ">=0.2,<0.3"
langgraph = ">=0.2.20,<0.3"
aiodynamo = {extras = ["aiohttp"], version = "^24.7"}
chromadb = "^0.5.11"
firecrawl-py = "^1.3.0"
fastapi-lifespan-manager = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit test",
    "integration: mark tests as integration",
]