[project]
authors = [
    { name = "Thang Phan", email = "phancaothng@gmail.com" },
    { name = "Nguyen Pham", email = "nguyenfamj1409@gmail.com" },
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi<1.0.0,>=0.111.1",
    "pydantic-settings<3.0.0,>=2.3.4",
    "uvicorn<1.0.0,>=0.30.3",
    "boto3<2.0.0,>=1.34.147",
    "langchain<0.4,>=0.3",
    "langserve<0.4,>=0.3",
    "sse-starlette>=2.1.2,<3.0.0",
    "langchain-community<0.4,>=0.3",
    "langchain-openai<0.3,>=0.2",
    "langgraph<0.3,>=0.2.20",
    "aiodynamo[aiohttp]<25.0,>=24.7",
    "chromadb<1.0.0,>=0.5.11",
    "firecrawl-py<2.0.0,>=1.3.0",
    "fastapi-lifespan-manager<1.0.0,>=0.1.4",
    "gunicorn>=23.0.0",
    "opensearch-py>=2.8.0",
]
name = "house-hunt-backend"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = ["pytest<9.0.0,>=8.3.3", "pytest-cov<6.0.0,>=5.0.0"]

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit test",
    "integration: mark tests as integration",
]
