[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Thang Phan <phancaothng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.37.0"
watchdog = "^4.0.1"
streamlit-chat = "^0.1.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
