[tool.poetry]
name = "house-hunt"
version = "0.1.0"
description = ""
authors = ["Thang Phan <phancaothng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.11.2"
scrapy-playwright = "^0.0.40"
playwright = "^1.45.0"
scrapy-redis = "^0.9.1"
python-dotenv = "^1.0.1"
boto3 = "^1.34.146"
dateparser = "^1.2.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
Scrapy = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
